Fix overlapping blocks on iPad. Fixes #79.

--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@
     transition: margin-bottom 0.2s;
 }
 
-.block-editor .block.block-statement.ui-selectee:not(.ui-sortable-placeholder) {
+.block-editor .block.block-statement:not(.ui-draggable):not(.ui-sortable-placeholder) {
     margin-bottom: 0;
 }
 
